--- a/Bachelorarbeit/appendix.tex
+++ b/Bachelorarbeit/appendix.tex
@@ -1,5 +1,14 @@
 \begin{appendix}
-\chapter{Blindtext im Anhang}
-\label{chap:appendix_1}
+\chapter{Anhang}
+\label{chap:anhang}
+
+\section{Batteriemasse}
+\begin{figure}[H]
+\centering
+	\includegraphics[scale=0.85]{Diagramme/Batteriemasse_genauer.pdf}
+	\caption{genauere Untersuchung der Batteriemassenabhängigkeit (\ensuremath{m_{Mot}=\SI{106}{g}}, \ensuremath{K_V=\SI{1390}{RPM/V}}, \ensuremath{n_{Prop}=4}, \ensuremath{Propeller=\SI{10x3}{}}, \ensuremath{n_{Bat,cell}=4}, \ensuremath{u_{Wg}=\SI{10}{m/s}})}
+	\label{abb:batteriemasse_genauer}
+\end{figure}
+
 
 \end{appendix}
