Kapitel 2 komplett neu strukturiert

--- a/Bachelorarbeit/Struktogramm/NEU/Verstellpropeller.tex
+++ b/Bachelorarbeit/Struktogramm/NEU/Verstellpropeller.tex
@@ -38,6 +38,7 @@
 		\assign[2]{Initialisierungen}
 		\while[5]{Für alle Propeller}
 			\assign[2]{\texttt{\textbf{Leistungsberechnung}}}
+			\assign[2]{Berechnung benötigter Energiemenge bei dieser Bahngeschwindigkeit mit diesem Propeller}
 		\whileend
 		\ifthenelse[10]{4}{1}{Sind die Werte NaN?}{nein}{ja}
 			\while[5]{Solange Abbruchkriterium nicht erreicht}		
