--- a/Bachelorarbeit/appendix.tex
+++ b/Bachelorarbeit/appendix.tex
@@ -2,6 +2,24 @@
 \chapter{Anhang}
 \label{chap:anhang}
 
+\section{Flächenflugzeug}
+Der in Gleichung \ref{eq:geschw_flaechenflugzeug} aufgeführte Zusammenhang entsteht aus dem Verhältnis der Fluggeschwindigkeiten bei konstanten Auftriebsbeiwert. Aus der Definition des Auftriebsbeiwertes
+\begin{equation}
+	c_{A} = \frac{A}{\rho/2\cdot V^2\cdot S}
+\end{equation}
+entsteht durch Umformen die Beziehung für die Geschwindigkeit
+\begin{equation}
+	V = \sqrt{\frac{2\cdot A}{\rho\cdot S \cdot c_{A}}} \eqend{.}
+\end{equation}
+Im Horizontalflug (\ensuremath{\gamma = 0}) kompensiert der Auftrieb lediglich die Gewichtskraft (Vgl. Gleichung \ref{eq:auftriebsgleichung_vereinfacht})
+\begin{equation}
+	A = G \eqend{.}
+\end{equation}
+Für jegliche Art von Steigflug (\ensuremath{\gamma \neq 0}) ist dies nicht mehr der Fall. Unter der Voraussetzung einer gleichen Gewichtskraft \ensuremath{m\cdot g}, gleicher Flügelfläche \ensuremath{S} und einem konstanten Auftriebsbeiwerts \ensuremath{c_{A}} ergibt sich für das Verhältnis der Geschwindigkeiten \ensuremath{V/V^\star}
+\begin{equation}
+	\frac{V}{V^\star} = \frac{\sqrt{\frac{2\cdot m \cdot g\cdot \cos\gamma}{\rho\cdot S \cdot c_{A}}}}{\sqrt{\frac{2\cdot m\cdot g}{\rho^\star \cdot S \cdot c_{A}}}} = \sqrt{\cos\gamma\cdot\frac{\rho^\star}{\rho}} \eqend{.}
+\end{equation}
+
 \section{Steiggeschwindigkeit}
 \begin{center}
 \begin{figure}[H]
