--- a/Bachelorarbeit/parameteruntersuchung.tex
+++ b/Bachelorarbeit/parameteruntersuchung.tex
@@ -433,7 +433,7 @@ Trotz seines Nutzens für die Höhenleistung werden die Vorteile eines CVT-Getri
 
 \section{Randbedingungen des Aeromot\_UAV-Projekts}
 \begin{itemize}
-	\item Schlussendlich soll noch der Einfluss der für dieses Projekt bestimmten Randbedingungen festgehalten werden
+	\item Schlussendlich soll noch unabhängig von den vorherigen Ergebnissen der Einfluss der für dieses Projekt bestimmten Randbedingungen festgehalten werden
 	\item diese betragen 
 	\item 
 	\begin{center}
