--- a/Bachelorarbeit/main.tex
+++ b/Bachelorarbeit/main.tex
@@ -93,7 +93,7 @@
     % Einbinden der einzelnen Kapitel
     \include{introduction}
     % \include{chapter_n}
-    \include{programm}
+    \include{programm2}
     \include{nachbildung}
     \include{parameteruntersuchung}
     \include{conclusion}
